--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "aphrodite": "^2.4.0",
     "autoprefixer": "^10.4.2",
     "emailjs": "^4.0.1",
     "postcss": "^8.4.7",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.7.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.5",
     "react-simple-image-slider": "^2.4.1",
     "react-typed": "^1.2.0",
+    "styled-components": "^5.3.9",
     "tailwindcss": "^3.0.23",
     "web-vitals": "^2.1.0"
   },
