--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emailjs/browser": "^3.10.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^1.0.5",
     "@material-tailwind/react": "^1.2.5",
     "@mui/icons-material": "^5.11.0",
@@ -13,10 +14,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@vitejs/plugin-react": "^3.1.0",
     "aphrodite": "^2.4.0",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.14",
     "emailjs": "^4.0.1",
-    "postcss": "^8.4.7",
+    "heroicons": "^2.0.17",
+    "postcss": "^8.4.21",
     "react": "^17.0.2",
     "react-animations": "^1.0.0",
     "react-dom": "^17.0.2",
@@ -29,6 +32,7 @@
     "react-typed": "^1.2.0",
     "styled-components": "^5.3.9",
     "tailwindcss": "^3.0.23",
+    "vite": "^4.2.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
